Fix Responsiveness issue (Unwanted whitespace between header and partnership after resizing the page)

--- a/styles.css
+++ b/styles.css
@@ -8,20 +8,25 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-/* body{
-    height: 100vh;
-} */
-
 header{
-    background-image: url("./assets/banner_image_1.png");
-    /* background-color: black; */
+    /* background-image: url("./assets/banner_image_1.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
+    height: 80vh; */
+    /* height: 800px; */
+    /* width: 100%; */
+    position: relative;
+    width: 100vw;
+}
+
+header img{
     height: 800px;
-    /* height: 80vh; */
-    /* height: 100%; */
+    height: 100%;
     width: 100%;
+    object-fit: contain;
+    object-position: top center;
+
 }
 
 header nav{
@@ -30,6 +35,11 @@ header nav{
     justify-content: space-between;
     align-items: center;
     padding: 0 5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    /* border: 2px solid red; */
 }
 
 button.portal{
@@ -44,6 +54,7 @@ button.portal{
     font-size: 1.1rem;
     font-weight: 400;
 }
+
 
 .partnership{
     padding-top: 2rem;
